implemented fixed table headerfor scrolling purpose. Added province section to table summary.

--- a/src/apollo/core/templates/core/checklist_summary_breakdown.html
+++ b/src/apollo/core/templates/core/checklist_summary_breakdown.html
@@ -1,14 +1,6 @@
 {% extends "core/layout.html" %}
 {% load apollo %}
 {% block content %}
-<script type="text/javascript">
-	$(document).ready(function(){
-      $('.table-fixed-header').fixedHeader();
-      });
-</script>
-<style>
-
-</style>
 <div class="row">
 	<div class="span8">
 		<ul class="breadcrumb">
@@ -47,18 +39,20 @@
 		      <div class="row">
 				<div class="span12">
 					<h5>AA. Were any election officials present upon arrival?</h5>
-					<table class="table table-bordered table-fixed" id="example">
+					<table  id="mytable" class="table table-bordered table-fixed-header">
+						<thead class="header">
+							<tr>
+								<td bgcolor="#eeeeee"></td>
+								<td width="100" bgcolor="#eeeeee"></td>
+								<td width="100" bgcolor="#eeeeee">Yes</td>
+								<td width="100" bgcolor="#eeeeee">No</td>
+						
+								<td width="80" bgcolor="#eeeeee">Reported</td>
+								<td width="80" bgcolor="#eeeeee">Missing</td>
+							</tr>
+						</thead>
 						<tr>
-							<td bgcolor="#eeeeee"></td>
-							<td width="100" bgcolor="#eeeeee"></td>
-							<td width="100" bgcolor="#eeeeee">Yes</td>
-							<td width="100" bgcolor="#eeeeee">No</td>
-					
-							<td width="80" bgcolor="#eeeeee">Reported</td>
-							<td width="80" bgcolor="#eeeeee">Missing</td>
-						</tr>
-						<tr>
-							<td rowspan="3">Bulawayo Municipality</td>
+							<td rowspan="3">Bulawayo</td>
 							<td align="right">All</td>
 							<td align="right">66.7% (100)</td>
 							<td align="right">33.3% (50)</td>
@@ -79,192 +73,59 @@
 							<td align="right">70.0% (105)</td>
 							<td align="right">30.0% (45)</td>
 						</tr>
-						<tr bgcolor="#eeeeee">
-							<td></td>
-							<td width="100"></td>
-							<td width="100">Yes</td>
-							<td width="100">No</td>
-							<td width="80">Reported</td>
-							<td width="80">Missing</td>
-						</tr>
+						<tr bgcolor="#eeeeee"><th></th><td colspan="5"></td></tr>
 						<tr>
-							<td rowspan="3">Emganwini</td>
-							<td align="right">All</td>
+							<td colspan="2">Bulawayo Municipality</td>
 							<td align="right">66.7% (100)</td>
 							<td align="right">33.3% (50)</td>
 							<td align="right">75.0% (150)</td>
 							<td align="right">25.0% (50)</td>
 						</tr>
 						<tr>
-							<td align="right">Urban</td>
-							<td align="right">88.9% (40)</td>
-							<td align="right">11.1% (5)</td>
-							<td align="right">90.0% (45)</td>
-							<td align="right">10.0% (5)</td>
-						</tr>
-						<tr>
-							<td align="right">Rural</td>
-							<td align="right">57.1% (60)</td>
-							<td align="right">42.9% (45)</td>
-							<td align="right">70.0% (105)</td>
-							<td align="right">30.0% (45)</td>
-						</tr>
-						<tr bgcolor="#eeeeee">
-							<td></td>
-							<td width="100"></td>
-							<td width="100">Yes</td>
-							<td width="100">No</td>
-							<td width="80">Reported</td>
-							<td width="80">Missing</td>
-						</tr>
-						<tr>
-							<td rowspan="3">Gwabalanda</td>
-							<td align="right">All</td>
+							<td colspan="2">Emganwini</td>
 							<td align="right">66.7% (100)</td>
 							<td align="right">33.3% (50)</td>
 							<td align="right">75.0% (150)</td>
 							<td align="right">25.0% (50)</td>
 						</tr>
 						<tr>
-							<td align="right">Urban</td>
-							<td align="right">88.9% (40)</td>
-							<td align="right">11.1% (5)</td>
-							<td align="right">90.0% (45)</td>
-							<td align="right">10.0% (5)</td>
-						</tr>
-						<tr>
-							<td align="right">Rural</td>
-							<td align="right">57.1% (60)</td>
-							<td align="right">42.9% (45)</td>
-							<td align="right">70.0% (105)</td>
-							<td align="right">30.0% (45)</td>
-						</tr>
-						<tr bgcolor="#eeeeee">
-							<td></td>
-							<td width="100"></td>
-							<td width="100">Yes</td>
-							<td width="100">No</td>
-							<td width="80">Reported</td>
-							<td width="80">Missing</td>
-						</tr>
-						<tr>
-							<td rowspan="3">Khumalo</td>
-							<td align="right">All</td>
+							<td colspan="2">Gwabalanda</td>
 							<td align="right">66.7% (100)</td>
 							<td align="right">33.3% (50)</td>
 							<td align="right">75.0% (150)</td>
 							<td align="right">25.0% (50)</td>
 						</tr>
 						<tr>
-							<td align="right">Urban</td>
-							<td align="right">88.9% (40)</td>
-							<td align="right">11.1% (5)</td>
-							<td align="right">90.0% (45)</td>
-							<td align="right">10.0% (5)</td>
-						</tr>
-						<tr>
-							<td align="right">Rural</td>
-							<td align="right">57.1% (60)</td>
-							<td align="right">42.9% (45)</td>
-							<td align="right">70.0% (105)</td>
-							<td align="right">30.0% (45)</td>
-						</tr>
-						<tr>
-							<td bgcolor="#eeeeee"></td>
-							<td width="100" bgcolor="#eeeeee"></td>
-							<td width="100" bgcolor="#eeeeee">Yes</td>
-							<td width="100" bgcolor="#eeeeee">No</td>
-					
-							<td width="80" bgcolor="#eeeeee">Reported</td>
-							<td width="80" bgcolor="#eeeeee">Missing</td>
-						</tr>
-						<tr>
-							<td rowspan="3">Mabutweni</td>
-							<td align="right">All</td>
+							<td colspan="2">Khumalo</td>
 							<td align="right">66.7% (100)</td>
 							<td align="right">33.3% (50)</td>
 							<td align="right">75.0% (150)</td>
 							<td align="right">25.0% (50)</td>
 						</tr>
 						<tr>
-							<td align="right">Urban</td>
-							<td align="right">88.9% (40)</td>
-							<td align="right">11.1% (5)</td>
-							<td align="right">90.0% (45)</td>
-							<td align="right">10.0% (5)</td>
-						</tr>
-						<tr>
-							<td align="right">Rural</td>
-							<td align="right">57.1% (60)</td>
-							<td align="right">42.9% (45)</td>
-							<td align="right">70.0% (105)</td>
-							<td align="right">30.0% (45)</td>
-						</tr>
-						<tr>
-							<td bgcolor="#eeeeee"></td>
-							<td width="100" bgcolor="#eeeeee"></td>
-							<td width="100" bgcolor="#eeeeee">Yes</td>
-							<td width="100" bgcolor="#eeeeee">No</td>
-					
-							<td width="80" bgcolor="#eeeeee">Reported</td>
-							<td width="80" bgcolor="#eeeeee">Missing</td>
-						</tr>
-						<tr>
-							<td rowspan="3">Masotsha Ndiovu</td>
-							<td align="right">All</td>
+							<td colspan="2">Mabutweni</td>
 							<td align="right">66.7% (100)</td>
 							<td align="right">33.3% (50)</td>
 							<td align="right">75.0% (150)</td>
 							<td align="right">25.0% (50)</td>
 						</tr>
 						<tr>
-							<td align="right">Urban</td>
-							<td align="right">88.9% (40)</td>
-							<td align="right">11.1% (5)</td>
-							<td align="right">90.0% (45)</td>
-							<td align="right">10.0% (5)</td>
-						</tr>
-						<tr>
-							<td align="right">Rural</td>
-							<td align="right">57.1% (60)</td>
-							<td align="right">42.9% (45)</td>
-							<td align="right">70.0% (105)</td>
-							<td align="right">30.0% (45)</td>
-						</tr>
-						<tr bgcolor="#eeeeee">
-							<td bgcolor="#eeeeee"></td>
-							<td width="100"></td>
-							<td width="100">Yes</td>
-							<td width="100">No</td>
-					
-							<td width="80">Reported</td>
-							<td width="80">Missing</td>
-						</tr>
-						<tr>
-							<td rowspan="3">Mzilikazi</td>
-							<td align="right">All</td>
+							<td colspan="2">Masotsha Ndiovu</td>
 							<td align="right">66.7% (100)</td>
 							<td align="right">33.3% (50)</td>
 							<td align="right">75.0% (150)</td>
 							<td align="right">25.0% (50)</td>
 						</tr>
 						<tr>
-							<td align="right">Urban</td>
-							<td align="right">88.9% (40)</td>
-							<td align="right">11.1% (5)</td>
-							<td align="right">90.0% (45)</td>
-							<td align="right">10.0% (5)</td>
+							<td colspan="2">Mzilikazi</td>
+							<td align="right">66.7% (100)</td>
+							<td align="right">33.3% (50)</td>
+							<td align="right">75.0% (150)</td>
+							<td align="right">25.0% (50)</td>
 						</tr>
-						<tr>
-							<td align="right">Rural</td>
-							<td align="right">57.1% (60)</td>
-							<td align="right">42.9% (45)</td>
-							<td align="right">70.0% (105)</td>
-							<td align="right">30.0% (45)</td>
-						</tr>
-					</table>
+					</table>	
 				</div>
-			</div>
+			  </div>
 		    </div>
 		    <div class="tab-pane" id="tab2">
 		      <p>Coming soon!</p>
