--- a/src/apollo/core/templates/core/layout.html
+++ b/src/apollo/core/templates/core/layout.html
@@ -11,6 +11,7 @@
     <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/select2.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/custom.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/table-fixed-header.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/datepicker.css" rel="stylesheet">
     {% block stylesheets %}{% endblock %}
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.8.1.js"></script>
@@ -18,6 +19,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/select2.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-datepicker.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/custom.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/table-fixed-header.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/protovis.min.js"></script>
     {% block javascripts %}{% endblock %}
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
