--- a/src/apollo/core/templates/core/checklist_summary.html
+++ b/src/apollo/core/templates/core/checklist_summary.html
@@ -33,8 +33,8 @@
 					<td>{{ label }}</td>
 					{% endfor %}
 				{% endif %}
-				<td bgcolor="#eee">Reported</td>
-				<td bgcolor="#eee">Missing</td>
+				<td width="100" bgcolor="#eee">Reported</td>
+				<td width="100" bgcolor="#eee">Missing</td>
 			</tr>
 			<tr>
 				{% if tag_stats.type == 'numeric' %}
