--- a/src/apollo/core/templates/core/forms_menu.html
+++ b/src/apollo/core/templates/core/forms_menu.html
@@ -8,7 +8,7 @@
 </li>
 {% endif %}
 {% if incident_forms %}
-<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-check"></i> Critical Incidents<b class="caret"></b></a>
+<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-check"></i> Incidents<b class="caret"></b></a>
     <ul class="dropdown-menu">
         {% for form in incident_forms %}
         <li><a href="{% url submissions_list form.pk %}"><i class="icon-check"></i> {{ form.name }}</a></li>
