fixed options display charts

--- a/src/apollo/core/templates/core/checklist_summary_breakdown.html
+++ b/src/apollo/core/templates/core/checklist_summary_breakdown.html
@@ -152,6 +152,7 @@
 								fill = ["#5F98FF","#95C8FF"];
 								labels_top =["Bulawayo"];
 								labels1 = ["no", "yes"];
+								labels_sub =["Mzilikazi", "Masotsha Ndiovu", "Mabutweni", "Khumalo", "Gwabalanda", "Emganwini", "Bulawayo Municipality"];
 
 								var vis=new pv.Panel().width(width).height(height);
 								bar = vis.add(pv.Layout.Stack)
